# Politicians

./: Ass5  CMakeLists.txt  DParty.cpp  DParty.h  Error.h  LDPolitician.cpp  LDPolitician.h  LRPolitician.cpp  LRPolitician.h  Party.cpp  Party.h  PoliticalSys.cpp  PoliticalSys.h  Politician.cpp  Politician.h  RParty.cpp  RParty.h  SDPolitician.cpp  SDPolitician.h  SRPolitician.cpp  SRPolitician.h  main.cpp  makefile
