cmake_minimum_required(VERSION 3.12)
project(Ass5Uv)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ass5Uv main.cpp DParty.cpp DParty.h Error.h LDPolitician.cpp LDPolitician.h LRPolitician.cpp LRPolitician.h Party.cpp Party.h PoliticalSys.cpp PoliticalSys.h Politician.cpp Politician.h RParty.cpp RParty.h SDPolitician.cpp SDPolitician.h SRPolitician.cpp SRPolitician.h)